public class Player
{
    public string playerId { get; set; }
    public string name { get; set; }
}